# Desktop-Organizer

./: .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  LICENSE  README.md  desktop-cleaner.code-workspace  main.py
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: build_release.yml  build_release.yml.txt  ci.yml.txt  release.yml.txt
docs/: .desktop_cleaner.toml  class_diagram.drawio  desktop_cleaner.drawio  project.md  todo.md
extras/: READM.md  desktop-cleaner.py
scripts/: prepareCMD.sh
src/: .desktop_cleaner.toml  .gorelease.yml  LICENSE  Makefile  args.rs  config.rs  error.rs  go.mod  go.sum  handle_dir.rs  logger.rs  main.go  main.py  main.rs  main.spec  prelude.rs  test.toml
src/api/: clients.go  errors.go  methods.go  stream.go
src/auth/: account.go  api.go  auth.go  org.go  state.go  trial.go
src/changes_tui/: actions.go  main_viewport.go  model.go  path_tabs.go  replace.go  run.go  selection.go  sidebar.go  update.go  view.go
src/cli/: clean.rs  colors.rs  completion.rs  mod.rs  root_command.rs
src/cmd/: build.go  config.go  connect.go  convo.go  delete_branch.go  diffs.go  invite.go  model_packs.go  models.go  new.go  ps.go  reject.go  revoke.go  rewind.go  root.go  set_model.go  sign_in.go  stop.go  summary.go  unarchive.go  update.go  users.go
src/fs/: fs.go
src/internal/: ai_models.go  auth.go  context.go  data_models.go  email.go  globals.go  images.go  plan_result.go  plan_result_pending_summary.go  plan_result_replacements.go  plan_settings.go  plan_status.go  req_res.go  stream.go  streamed_change.go  tokens.go  (+1 more)
(+120 files in other folders)
