[package]
name = "desktop_cleaner"
version = "1.3.0"
edition = "2021"
author = "DaOfficialWizard"
description = "A simple CLI utility to organize your desktop (or a specified directory)"
license = "MIT"
repository = "https://github.com/ZanzyTHEbar/Desktop-Cleaner"
readme = "README.md"
keywords = ["desktop", "cleaner", "clean", "organize"]
categories = ["utility", "command-line-utilities", "desktop", "cleaner", "clean", "organize"]
rust-version = "1.68"

[dependencies]
log = "^0.4.17"
sysinfo = "0.29.0"
serde_json = "1.0"
env_logger = "0.10.0"
thiserror = "1"
toml = "0.7.4"
directories = "5.0.1"
tracing = "0.1.37"
indoc = "2"

[dependencies.opzioni]
version = "0.1.3"
default-features = false
features = ["toml", "tracing"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.clap]
version = "4"
features = ["derive", "cargo"]

[dev-dependencies]
anyhow = "1"

[profile]
[profile.dev]
debug = 0

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
